# cattysend

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SSOT_ANALYSIS.md  clippy.toml
.gemini/: gui-optimization-analysis.md  sender-bug-analysis.md  user-space-architecture.md
assets/: cattysend.service
crates/cattysend-cli/: Cargo.toml
crates/cattysend-cli/src/: client.rs  main.rs
crates/cattysend-core/: Cargo.toml
crates/cattysend-core/src/: config.rs  lib.rs
crates/cattysend-core/src/ble/: advertiser.rs  client.rs  gatt.rs  mgmt_advertiser.rs  mod.rs  scanner.rs  server.rs
crates/cattysend-core/src/crypto/: ble_security.rs  mod.rs
crates/cattysend-core/src/logging/: mod.rs
crates/cattysend-core/src/transfer/: http_server.rs  mod.rs  protocol.rs  receiver_client.rs  sender_server.rs  websocket_handler.rs
crates/cattysend-core/src/wifi/: mod.rs  nm_dbus.rs  p2p_receiver.rs  p2p_sender.rs  tests.rs
crates/cattysend-core/src/workflow/: mod.rs  receiver.rs  sender.rs
crates/cattysend-core/tests/: integration_tests.rs
crates/cattysend-daemon/: Cargo.toml
crates/cattysend-daemon/src/: ipc.rs  main.rs  service.rs
crates/cattysend-gui/: Cargo.toml
crates/cattysend-gui/src/: app.rs  main.rs  state.rs  styles.rs
crates/cattysend-gui/src/components/: device_list.rs  header.rs  mod.rs  mode_selector.rs  transfer_panel.rs
crates/cattysend-tui/: Cargo.toml
crates/cattysend-tui/src/: app.rs  main.rs  tui_log.rs  ui.rs
docs/: ARCHITECTURE.md  BLUEZ_EXPERIMENTAL.md  IMPLEMENTATION_AUDIT.md  LINUX_RUST_IMPLEMENTATION.md  PROTOCOL_SPECIFICATION.md  ROADMAP.md  RUST_BEST_PRACTICES_2026.md
src/: main.rs
src/ble/: gatt.rs  mod.rs  scanner.rs
src/transfer/: http_server.rs
src/wifi/: p2p_receiver.rs  p2p_sender.rs
xtask/: Cargo.toml
xtask/src/: main.rs
