[package]
name = "cattysend-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
zbus = "4"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
p256 = { version = "0.13", features = ["ecdh", "pkcs8"] }
aes = "0.8"
ctr = "0.9"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
futures-util = "0.3"
tokio-stream = "0.1"
bluer = { version = "0.17", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
