[workspace]
resolver = "2"
members = [
    "crates/cattysend-core",
    "crates/cattysend-daemon",
    "crates/cattysend-cli",
    "crates/cattysend-tui",
    "crates/cattysend-gui",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["drie"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# BLE
btleplug = "0.11"
bluer = { git = "https://github.com/Tinnci/bluer.git", branch = "feature/scan-response-data", features = ["full"] }

# Networking
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
p256 = { version = "0.13", features = ["ecdh", "pkcs8"] }
aes = "0.8"
ctr = "0.9"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
hostname = "0.4"
dirs = "5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# 注意: 上游依赖警告
# ashpd v0.8.1 (dioxus-desktop -> rfd 引入) 包含未来 Rust 版本会拒绝的代码
# 这需要等待 dioxus 升级其 rfd 依赖来解决
# 跟踪 Issue: https://github.com/PolyMeilex/rfd/issues/XXX

[workspace.lints.clippy]
# Rust 2026 最佳实践准备
# 注意: allow_attributes 和 allow_attributes_without_reason 在未来版本可用
# 当前使用基本的代码质量检查

# 基本代码质量规则（使用较低优先级以允许覆盖）
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# 允许一些过于严格的规则以保持实用性
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
