[package]
name = "cattysend-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

# BLE
btleplug = { workspace = true }
bluer = { workspace = true }

# Networking
axum = { workspace = true, features = ["ws"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
reqwest = { workspace = true }

# TLS
native-tls = "0.2"
tokio-native-tls = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto
p256 = { workspace = true }
aes = { workspace = true }
ctr = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# Compression
zip = { version = "2", default-features = false, features = ["deflate"] }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
log = "0.4"
uuid = { workspace = true }
regex = "1"
hostname = { workspace = true }
dirs = { workspace = true }
mime_guess = "2"
libc = "0.2"
toml = "0.8"

# D-Bus (NetworkManager integration)
zbus = { version = "4", default-features = false, features = ["tokio"] }
btmgmt = "0.2.5"

