[package]
name = "cattysend-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cattysend-tui"
path = "src/main.rs"

[dependencies]
cattysend-core = { path = "../cattysend-core" }

tokio = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = "0.2"
async-trait = "0.1"

ratatui = { workspace = true }
crossterm = { workspace = true }
rand = { workspace = true }
